# CALICESiWTB

./: CALICESiWTB.cc  CALICESiWTB_gui.mac  CALICESiWTB_init_vis.mac  CI_run.mac  CMakeLists.txt  GNUmakefile  README.md  myCaliceGeometry.gdml  runSim.py  run_pi-_10GeV.mac  run_pi-_2GeV.mac  run_pi-_4GeV.mac  run_pi-_6GeV.mac  run_pi-_8GeV.mac
.github/workflows/: geant4-test.yml
analysis/: MyLongitudinalPlots.C
analysis/v0.3/: AnalysisHelper.h  MyLongitudinalPlots.C
analysis/v0.4/: MyLongitudinalPlots.C
geantval_scripts/CALICESiWTB/: params.conf  parser.py  run.sh  template.conf
geantval_scripts/CALICESiWTB/files/: MyLongitudinalPlots.C
geantval_scripts/configs/: 10.4.p01.sh  10.5.p01.sh  10.6.p03.sh  10.7.p03.sh  11.0.p04.sh  11.1.p01.sh  11.2.p01.sh
include/: CaliceActionInitialization.hh  CaliceAnalysisManager.hh  CaliceCalorimeterHit.hh  CaliceDetectorConstruction.hh  CaliceEcalSD.hh  CaliceEventAction.hh  CalicePrimaryGeneratorAction.hh  CaliceRunAction.hh  CaliceSteppingAction.hh  CaliceTrackingAction.hh
runcards/: run_pi-_10GeV.mac  run_pi-_4GeV.mac
scripts/: CALICESiWTB_HTCondor_10.7.p03.sh  CALICESiWTB_lxplus_10.7.p03.sh  CALICESiWTB_lxplus_11.2.sh
src/: CALICESiWTB.cc  CaliceActionInitialization.cc  CaliceAnalysisManager.cc  CaliceCalorimeterHit.cc  CaliceDetectorConstruction.cc  CaliceEcalSD.cc  CaliceEventAction.cc  CalicePrimaryGeneratorAction.cc  CaliceRunAction.cc  CaliceSteppingAction.cc  CaliceTrackingAction.cc
